# CiS-Homer

./: .gitignore  .gitmodules  NTC.m  colors.json  homer.spec  makefile  test_cb.py
.github/flatpak/: com.cis.Homer.yml
.github/workflows/: release.yml
Docs/: readme.md
Software/: build_hook.py  main.py  pyproject.toml
Software/lib/: Config.py  Export.py  Plotting.py  Sensor.py  Temperature.py  UI.py  UI_Options.py
Software/lib/UI/: Calibration.py  CalibrationWidgets.py  Keyboard.py  Options.py  Settings.py  Visualizer.py  __init__.py
Software/res/: colors.json
