[project]
name = "homerpi"
version = "0.1.0"
description = "CiS HomerPi"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "packaging==26.0",
    "pyserial==3.5",
    "software==0.0.0"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
