[project]
name = "homerpi"
version = "0.1.0"
description = "CiS HomerPi"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib==3.10.8",
    "numpy==2.4.3",
    "pillow==12.1.1",
    "pyparsing==3.3.2",
    "pyserial==3.5",
    "ttkbootstrap==1.20.2"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
