[project]
name = "homerpi"
version = "0.1.0"
description = "CiS HomerPi"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "pillow>=11.3.0",
    "pyparsing==3.3.2",
    "pyserial==3.5",
    "ttkbootstrap>=1.18"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]
